[package]
name = "ledger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
csv = "1.1"
serde = { version = "1.0.135", features = ["derive"] }
anyhow = "1.0.53"
thiserror = "1.0.30"
itertools = "0.10.3"
rust_decimal = "1.20"
rust_decimal_macros = "1.20"

tracing = "0.1.28"
tracing-subscriber = "0.2.24"
